plays track update

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
 ﻿attrs==23.2.0
 beautifulsoup4==4.12.2
 certifi==2023.11.17
-cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
-greenlet==3.0.3
+greenlet
 h11==0.14.0
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.3
+MarkupSafe
 outcome==1.3.0.post0
 pushbullet-python==1.7.0
 pushbullet.py==0.9.1
